[gd_scene load_steps=11 format=3 uid="uid://dqg674t6kun4e"]

[ext_resource type="Script" uid="uid://vnpslgl788du" path="res://settings.gd" id="1_uaa7d"]
[ext_resource type="Script" uid="uid://kt7n1epi3ng8" path="res://eq_settings.gd" id="2_1n4m6"]
[ext_resource type="Texture2D" uid="uid://1rstn6r2wisy" path="res://X.png" id="2_iuivb"]
[ext_resource type="Texture2D" uid="uid://pgij783wgbhn" path="res://File.png" id="2_jmen4"]
[ext_resource type="Script" uid="uid://cej7efsj2cyen" path="res://language_button.gd" id="2_sfvul"]

[sub_resource type="LabelSettings" id="LabelSettings_ouq8m"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_2bhor"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_p55k3"]
font_size = 11

[sub_resource type="LabelSettings" id="LabelSettings_cwn10"]
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_i51gs"]
font_size = 50

[node name="SettingsMenuChild" type="Control"]
custom_minimum_size = Vector2(576, 493)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -288.0
offset_right = 288.0
offset_bottom = 493.0
grow_horizontal = 2
size_flags_vertical = 0
script = ExtResource("1_uaa7d")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(576, 493)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(576, 493)
layout_mode = 2
size_flags_vertical = 0

[node name="SETTINGS" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(68.49, 25.94)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "SETTINGS"
label_settings = SubResource("LabelSettings_ouq8m")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Seperator5" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16.07)
layout_mode = 2

[node name="THIRDPARTYAPPS" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 26.975)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "INTIGRATIONS"
label_settings = SubResource("LabelSettings_2bhor")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DiscordRichPresenceButton" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "DRPC"

[node name="disclaimer" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(229.895, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "DRPC_NOTE"
label_settings = SubResource("LabelSettings_p55k3")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Seperator4" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16.07)
layout_mode = 2

[node name="Looks" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 26.975)
layout_mode = 2
size_flags_vertical = 3
text = "LOOKS"
label_settings = SubResource("LabelSettings_2bhor")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="Seperator8" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16.07)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "LANGUAGE"

[node name="LanguageButton" type="MenuButton" parent="ScrollContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("settings")]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "SELECT"
flat = false
script = ExtResource("2_sfvul")
settings = NodePath("../../../..")

[node name="Seperator3" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16.07)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(15, 15)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_jmen4")
expand_mode = 3

[node name="BackroundDirLabel" type="Label" parent="ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
label_settings = SubResource("LabelSettings_cwn10")

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SelectBG" type="Button" parent="ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 25.35)
layout_mode = 2
size_flags_horizontal = 4
text = "BS_SELECT"

[node name="ResetBG" type="Button" parent="ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 25.35)
layout_mode = 2
size_flags_horizontal = 4
text = "RESET_BG"

[node name="SelectBGDialog" type="FileDialog" parent="ScrollContainer/VBoxContainer"]
title = "Open a File"
size = Vector2i(324, 180)
transient = false
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png", "*.jpg ", "*.jpeg", "*.gif", "*")
show_hidden_files = true
use_native_dialog = true

[node name="Seperator2" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16.07)
layout_mode = 2

[node name="FUN" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 26.975)
layout_mode = 2
size_flags_vertical = 3
text = "SETTINGS_SOUND"
label_settings = SubResource("LabelSettings_2bhor")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Seperator" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16.07)
layout_mode = 2

[node name="PitchAdjustSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(328.985, 0)
layout_mode = 2
size_flags_horizontal = 0
split_offset = 200
dragger_visibility = 2

[node name="PitchSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/PitchAdjustSettings"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
min_value = 0.25
max_value = 2.0
step = 0.05
value = 1.0

[node name="PitchAdjustSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/PitchAdjustSettings"]
custom_minimum_size = Vector2(130.38, 0)
layout_mode = 2
size_flags_horizontal = 4
split_offset = 995
dragger_visibility = 2

[node name="PitchValue" type="Label" parent="ScrollContainer/VBoxContainer/PitchAdjustSettings/PitchAdjustSettings"]
custom_minimum_size = Vector2(23.9, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FUN" type="Label" parent="ScrollContainer/VBoxContainer/PitchAdjustSettings/PitchAdjustSettings"]
custom_minimum_size = Vector2(100.49, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "PITCH_SPEED"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ReverbCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "REVERB"

[node name="ReverbSettings" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="SizeAdjustSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/ReverbSettings"]
custom_minimum_size = Vector2(328.985, 0)
layout_mode = 2
size_flags_horizontal = 0
split_offset = 200
dragger_visibility = 2

[node name="RoomSizeSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/ReverbSettings/SizeAdjustSettings"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
max_value = 0.95
step = 0.05
value = 0.8

[node name="PitchAdjustSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/ReverbSettings/SizeAdjustSettings"]
custom_minimum_size = Vector2(130.38, 0)
layout_mode = 2
size_flags_horizontal = 4
split_offset = 995
dragger_visibility = 2

[node name="RoomSizeValue" type="Label" parent="ScrollContainer/VBoxContainer/ReverbSettings/SizeAdjustSettings/PitchAdjustSettings"]
custom_minimum_size = Vector2(23.9, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FUN" type="Label" parent="ScrollContainer/VBoxContainer/ReverbSettings/SizeAdjustSettings/PitchAdjustSettings"]
custom_minimum_size = Vector2(94.52, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "ROOM_SIZE"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DampeningAdjustSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/ReverbSettings"]
custom_minimum_size = Vector2(328.985, 0)
layout_mode = 2
size_flags_horizontal = 0
split_offset = 200
dragger_visibility = 2

[node name="DampeningSizeSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/ReverbSettings/DampeningAdjustSettings"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
max_value = 0.95
step = 0.05
value = 0.8

[node name="DampaningAdjustSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/ReverbSettings/DampeningAdjustSettings"]
custom_minimum_size = Vector2(130.38, 0)
layout_mode = 2
size_flags_horizontal = 4
split_offset = 995
dragger_visibility = 2

[node name="DampeningValue" type="Label" parent="ScrollContainer/VBoxContainer/ReverbSettings/DampeningAdjustSettings/DampaningAdjustSettings"]
custom_minimum_size = Vector2(23.9, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FUN" type="Label" parent="ScrollContainer/VBoxContainer/ReverbSettings/DampeningAdjustSettings/DampaningAdjustSettings"]
custom_minimum_size = Vector2(94.52, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Damping"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="SpreadAdjustSettings2" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/ReverbSettings"]
custom_minimum_size = Vector2(328.985, 0)
layout_mode = 2
size_flags_horizontal = 0
split_offset = 200
dragger_visibility = 2

[node name="SpreadSizeSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/ReverbSettings/SpreadAdjustSettings2"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
max_value = 0.95
step = 0.05
value = 0.8

[node name="SpreadAdjustSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/ReverbSettings/SpreadAdjustSettings2"]
custom_minimum_size = Vector2(130.38, 0)
layout_mode = 2
size_flags_horizontal = 4
split_offset = 995
dragger_visibility = 2

[node name="SpreadValue" type="Label" parent="ScrollContainer/VBoxContainer/ReverbSettings/SpreadAdjustSettings2/SpreadAdjustSettings"]
custom_minimum_size = Vector2(23.9, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FUN" type="Label" parent="ScrollContainer/VBoxContainer/ReverbSettings/SpreadAdjustSettings2/SpreadAdjustSettings"]
custom_minimum_size = Vector2(94.52, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "SPREAD"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="EQCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "EQ"

[node name="EQSettings" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_1n4m6")

[node name="CompressionCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "COMPRESSION"

[node name="CompressionContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ThresholdSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/CompressionContainer"]
custom_minimum_size = Vector2(328.985, 0)
layout_mode = 2
size_flags_horizontal = 0
split_offset = 200
dragger_visibility = 2

[node name="ThresholdSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/CompressionContainer/ThresholdSettings"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
min_value = -60.0
max_value = 0.0
step = 0.5
value = -9.0

[node name="ThresholdSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/CompressionContainer/ThresholdSettings"]
custom_minimum_size = Vector2(130.38, 0)
layout_mode = 2
size_flags_horizontal = 4
split_offset = 995
dragger_visibility = 2

[node name="ThresholdValue" type="Label" parent="ScrollContainer/VBoxContainer/CompressionContainer/ThresholdSettings/ThresholdSettings"]
custom_minimum_size = Vector2(23.9, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FUN" type="Label" parent="ScrollContainer/VBoxContainer/CompressionContainer/ThresholdSettings/ThresholdSettings"]
custom_minimum_size = Vector2(94.52, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "THRESHOLD"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="RatioSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/CompressionContainer"]
custom_minimum_size = Vector2(328.985, 0)
layout_mode = 2
size_flags_horizontal = 0
split_offset = 200
dragger_visibility = 2

[node name="RatioSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/CompressionContainer/RatioSettings"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
min_value = 1.0
max_value = 48.0
value = 4.0

[node name="RatioSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/CompressionContainer/RatioSettings"]
custom_minimum_size = Vector2(130.38, 0)
layout_mode = 2
size_flags_horizontal = 4
split_offset = 995
dragger_visibility = 2

[node name="RatioValue" type="Label" parent="ScrollContainer/VBoxContainer/CompressionContainer/RatioSettings/RatioSettings"]
custom_minimum_size = Vector2(23.9, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FUN" type="Label" parent="ScrollContainer/VBoxContainer/CompressionContainer/RatioSettings/RatioSettings"]
custom_minimum_size = Vector2(94.52, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Ratio
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GainSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/CompressionContainer"]
custom_minimum_size = Vector2(328.985, 0)
layout_mode = 2
size_flags_horizontal = 0
split_offset = 200
dragger_visibility = 2

[node name="GainSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/CompressionContainer/GainSettings"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
min_value = -10.0
max_value = 8.0
step = 0.5

[node name="GainSettings" type="HSplitContainer" parent="ScrollContainer/VBoxContainer/CompressionContainer/GainSettings"]
custom_minimum_size = Vector2(130.38, 0)
layout_mode = 2
size_flags_horizontal = 4
split_offset = 995
dragger_visibility = 2

[node name="GainValue" type="Label" parent="ScrollContainer/VBoxContainer/CompressionContainer/GainSettings/GainSettings"]
custom_minimum_size = Vector2(23.9, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "1.0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="FUN" type="Label" parent="ScrollContainer/VBoxContainer/CompressionContainer/GainSettings/GainSettings"]
custom_minimum_size = Vector2(94.52, 7.51)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Gain
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Seperator6" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16.07)
layout_mode = 2

[node name="MISC" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 26.975)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
text = "MISC"
label_settings = SubResource("LabelSettings_2bhor")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NowPlayingWindowButton" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "STREAMER_WINDOW"

[node name="NowPlayingInfo" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(229.895, 0)
layout_mode = 2
size_flags_horizontal = 0
text = "STREAMER_NOTE"
label_settings = SubResource("LabelSettings_p55k3")
vertical_alignment = 1
autowrap_mode = 2

[node name="Credits" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 4
text = "CREDITS"
label_settings = SubResource("LabelSettings_i51gs")

[node name="Label5" type="LinkButton" parent="ScrollContainer/VBoxContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 4
text = "Godot"
underline = 1
uri = "https://godotengine.org"

[node name="Label2" type="LinkButton" parent="ScrollContainer/VBoxContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 4
text = "YT_DL"
underline = 1
uri = "https://github.com/Nolkaloid/godot-yt-dlp"

[node name="Label3" type="LinkButton" parent="ScrollContainer/VBoxContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 4
text = "DRPCL"
underline = 1
uri = "https://github.com/vaporvee/discord-rpc-godot"

[node name="Label4" type="LinkButton" parent="ScrollContainer/VBoxContainer/Credits"]
layout_mode = 2
size_flags_horizontal = 4
text = "GDGIF"
underline = 1
uri = "https://github.com/BOTLANNER/godot-gif"

[node name="Seperator7" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16.07)
layout_mode = 2

[node name="TimeListening" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Reset" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
text = "RESET_SETTINGS"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
icon = ExtResource("2_iuivb")
flat = true
expand_icon = true

[connection signal="toggled" from="ScrollContainer/VBoxContainer/DiscordRichPresenceButton" to="." method="_on_discord_rich_presence_button_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer/SelectBG" to="." method="_on_select_bg_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/VBoxContainer/HBoxContainer/ResetBG" to="." method="_on_reset_bg_pressed"]
[connection signal="file_selected" from="ScrollContainer/VBoxContainer/SelectBGDialog" to="." method="_on_select_bg_dialog_file_selected"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/PitchAdjustSettings/PitchSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/ReverbCheck" to="." method="_on_reverb_check_toggled"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/ReverbSettings/SizeAdjustSettings/RoomSizeSlider" to="." method="_on_room_size_slider_drag_ended"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/ReverbSettings/DampeningAdjustSettings/DampeningSizeSlider" to="." method="_on_dampening_size_slider_drag_ended"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/ReverbSettings/SpreadAdjustSettings2/SpreadSizeSlider" to="." method="_on_spread_size_slider_drag_ended"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/EQCheckBox" to="." method="_on_eq_check_box_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/CompressionCheck" to="." method="_on_compression_check_toggled"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/CompressionContainer/ThresholdSettings/ThresholdSlider" to="." method="_on_threshold_slider_drag_ended"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/CompressionContainer/RatioSettings/RatioSlider" to="." method="_on_ratio_slider_drag_ended"]
[connection signal="drag_ended" from="ScrollContainer/VBoxContainer/CompressionContainer/GainSettings/GainSlider" to="." method="_on_gain_slider_drag_ended"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/NowPlayingWindowButton" to="." method="_on_now_playing_window_button_toggled"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Reset" to="ScrollContainer/VBoxContainer/EQSettings" method="_on_reset_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
